Letter-spacing fixes

--- a/frontend/src/components/TaskTable.module.scss
+++ b/frontend/src/components/TaskTable.module.scss
@@ -31,7 +31,6 @@
   font-family: 'Work Sans';
   font-weight: 400;
   font-size: 14px;
-  letter-spacing: 1px;
   cursor: pointer;
 
   & > :first-child {
