--- a/frontend/src/pages/TimeEstimationPage.module.scss
+++ b/frontend/src/pages/TimeEstimationPage.module.scss
@@ -13,7 +13,7 @@
   text-transform: uppercase;
   font-weight: 700;
   font-style: normal;
-  letter-spacing: 2px;
+  letter-spacing: 0.2em;
   color: $COLOR_AZURE;
 }
 
